--- a/components.html
+++ b/components.html
@@ -10,8 +10,49 @@
       <h1 class="text-center">Components Demo</h1>
 
       <!-- TODO: live-code your components -->
-      <h2>1. A container</h2>
-      <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries. We bring coding skills to creative people who aim to create their own startup, or add a technical know-how to their skillset.</p>
+      <div class="container">
+        <h2>1. A container</h2>
+        <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries. We bring coding skills to creative people who aim to create their own startup, or add a technical know-how to their skillset.</p>
+        <h2>2. An avatar</h2>
+        <img src="images/someone.jpg" alt="someones picture" class="avatar">
+        <img src="images/someone-else.jpg" alt="someone elses picture" class="avatar-large">
+        <h2>3. An button</h2>
+        <a href="#" class="btn-airbnb">Search</a>
+        <a href="#" class="btn-medium">Follow</a>
+        <h2>4. A banner</h2>
+      </div>
+      <div class="banner" style="background-image: url(images/background.jpg)">
+        <div class="container">
+          <h1>Change your life, learn to code</h1>
+          <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries. We bring coding skills to creative people who aim to create their own startup, or add a technical know-how to their skillset.</p>
+          <a href="#" class="btn-medium">Follow</a>
+        </div>
+      </div>
+      <div class="container">
+        <h2>5. A category card</h2>
+        <div class="card-category" style="background-image: url(images/breakfast.jpg)">
+          <h2>Breakfast</h2>
+        </div>
+        <h2>5. A product card</h2>
+        <div class="card-product">
+          <img src="images/mug.jpg" alt="mug">
+          <div>
+            <h2>A mug</h2>
+            <p>This mug is great, I mean really great!</p>
+          </div>
+        </div>
+        <h2>5. A trip card</h2>
+        <div class="card-trip">
+          <img src="images/paradise.jpg" alt="paradise">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to Doi Inthanon</h2>
+              <p>A wonderful place in Thailand</p>
+            </div>
+            <h2>$300</h2>
+          </div>
+        </div>
+      </div>
 
   </body>
 </html>
