--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
   <body>
 
     <!-- TODO: Use your components to create a simple landing page -->
+    <div class="banner" style="background-image: url(images/background.jpg)">
+        <div class="container">
+          <h1>Change your life, learn to code</h1>
+          <p>Le Wagon is a 9-week full-stack coding bootcamp based out of 30 cities in 20 countries. We bring coding skills to creative people who aim to create their own startup, or add a technical know-how to their skillset.</p>
+          <a href="#" class="btn-medium">Follow</a>
+        </div>
+      </div>
 
+      <div class="container">
+        <div class="card-trip">
+          <img src="images/paradise.jpg" alt="paradise">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to Doi Inthanon</h2>
+              <p>A wonderful place in Thailand</p>
+            </div>
+            <h2>$300</h2>
+          </div>
+        </div>
+        <div class="card-trip">
+          <img src="images/paradise.jpg" alt="paradise">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to Doi Inthanon</h2>
+              <p>A wonderful place in Thailand</p>
+            </div>
+            <h2>$300</h2>
+          </div>
+        </div>
+        <div class="card-trip">
+          <img src="images/paradise.jpg" alt="paradise">
+          <div class="card-trip-info">
+            <div>
+              <h2>Trip to Doi Inthanon</h2>
+              <p>A wonderful place in Thailand</p>
+            </div>
+            <h2>$300</h2>
+          </div>
+        </div>
+      </div>
   </body>
 
 </html>
